--- a/src/global/app.css
+++ b/src/global/app.css
@@ -29,3 +29,7 @@
   More info about color theming using Ionic:
   https://ionicframework.com/docs/theming/color-generator
 */
+
+.pop-student {
+  --width: 95%;
+}
