--- a/src/components/student-new/student-new.css
+++ b/src/components/student-new/student-new.css
@@ -9,3 +9,22 @@
 .form-container {
   padding: 1rem;
 }
+
+.avatar-container {
+  display: inline-block;
+  margin: .75em auto
+}
+[class^="student-image-"] {
+  border-radius: 50%;
+}
+.student-image-large {
+  border: .5rem solid #fff;
+  max-width: 120px;
+  height: auto;
+  margin: 0 auto;
+}
+.student-image-small {
+  max-width: 48px;
+  height: auto;
+  margin-right: .5rem;
+}
